fix small things, plus scrolloverflow

--- a/solution-p/less/section_services.less
+++ b/solution-p/less/section_services.less
@@ -4,10 +4,9 @@
 
 
 .section_services {
-    min-height: 600px;
+    min-height: 660px;
 }
 .section_services .section__header {
-    // margin-top: -50px; // удалить
     padding: 20px;
     font-size: 34px;
     .font_header;
@@ -22,7 +21,7 @@
 }
 .services {
     margin: 0 auto;
-    margin-bottom: 40px;
+    margin-bottom: 60px;
     padding-bottom: 25px;
     overflow: hidden;
 }
@@ -37,10 +36,8 @@
 }
 .service_link:hover {
     color: @main;
-    // .transition (all 0.3s);
     .service__img {
         border-color: @main;
-        .transition (all 0.3s);
     }
     .icon {
         fill: @main;
@@ -114,9 +111,7 @@
 @media @mobile {
     .section_services {
         .section__header {
-            // margin-top: 40px; // вернуть на 20px
-            margin-top: 80px;
-            // margin-bottom: 20px; // удалить
+            margin-top: 100px;
             padding: 0;
         }
         .section__desc {
@@ -125,7 +120,7 @@
         .service__block {
             width: 50%;
             max-width: 400px;
-            // margin-bottom: 40px; // удалить
+            margin-bottom: 40px; // удалить
         }
         .services {
             max-width: 400px;
@@ -137,27 +132,27 @@
         }
         .btn_white {
             max-width: 360px;
-            margin-bottom: 20px; // удалить
+            margin-bottom: 60px; // удалить
         }
     }
 }
 @media @pre-tablet {
     .section_services {
         .section__header {
-            margin-top: -10px;
+            margin-top: 100px;
         }
         .services {
             margin-bottom: 20px;
         }
         .btn_white {
-            max-width: 360px;
+            // max-width: 360px;
         }
     }
 }
 @media @tablet {
     .section_services {
         .section__header {
-            margin-top: -10px;
+            margin-top: 100px;
         }
         .services {
             margin-bottom: 20px;
